--- a/frontend/src/features/restaurant/components/MenuItemCard.module.css
+++ b/frontend/src/features/restaurant/components/MenuItemCard.module.css
@@ -1,4 +1,7 @@
 .card {
+    width: 300px;
+    height: 341px;
+    min-width: 240px;
     position: relative;
     background: #fff;
     border-radius: 8px;
@@ -7,7 +10,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 8px;
+    padding: 24px;
+    gap: 24px 24px;
 }
   
 .image {
