--- a/frontend/src/features/restaurant/pages/MenuItems/MenuItems.module.css
+++ b/frontend/src/features/restaurant/pages/MenuItems/MenuItems.module.css
@@ -1,4 +1,6 @@
 .container {
+    /* width: 100%;
+    height: 100%; */
     display: flex;
     flex-direction: column;
 }
@@ -22,7 +24,11 @@
 }
   
 .foodGrid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 27px 64px;
+    gap: 48px;
+    justify-content: center;
 }
