--- a/frontend/src/assets/globals.css
+++ b/frontend/src/assets/globals.css
@@ -1,8 +1,12 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 body, html, #root, .App {
     margin: 0;
     padding: 0;
     height: 100%;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .App {
