--- a/frontend/src/features/checkout/styles/Checkout.module.css
+++ b/frontend/src/features/checkout/styles/Checkout.module.css
@@ -8,7 +8,7 @@
 .container {
     position: relative;
     width: 100%;
-    flex: 1;
+    height: 100vh;
     overflow: hidden;
 }
   
@@ -18,30 +18,35 @@
 */
 .leftPanel {
     position: absolute;
-    top: 0;
+    top: 5%;
     left: 50%;
     width: 50%;
-    height: 100%;
+    height: 90%;
     transform: translateX(-50%);
     transition: transform 0.5s ease-in-out;
+    border: 0.5px solid #B3B3B3;
+    border-radius: 8px;
 }
   
 /* When active step changes, shift the left panel to the left */
 .leftPanelShifted {
-    transform: translateX(-100%);
+    width: 25%;
+    transform: translateX(-160%);
 }
   
 /* The right panel is fixed on the right side */
 .rightPanel {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 5%;
+    right: 10%;
     width: 50%;
-    height: 100%;
+    height: 90%;
     background: #f9f9f9;
     padding: 24px;
     box-sizing: border-box;
     overflow-y: auto;
     transition: opacity 0.5s ease-in-out;
+    border: 0.5px solid #B3B3B3;
+    border-radius: 8px;
 }
   
