fix: the checkout page ratio

--- a/frontend/src/features/checkout/styles/Checkout.module.css
+++ b/frontend/src/features/checkout/styles/Checkout.module.css
@@ -23,29 +23,30 @@
     width: 50%;
     height: 90%;
     transform: translateX(-50%);
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, width 0.5s ease-in-out;
     border: 0.5px solid #B3B3B3;
     border-radius: 8px;
 }
   
 /* When active step changes, shift the left panel to the left */
 .leftPanelShifted {
-    width: 25%;
-    transform: translateX(-160%);
+    width: 30%;
+    transform: translateX(-141.667%);
 }
   
 /* The right panel is fixed on the right side */
 .rightPanel {
     position: absolute;
     top: 5%;
-    right: 10%;
+    right: 7.5%;
     width: 50%;
     height: 90%;
     background: #f9f9f9;
     padding: 24px;
     box-sizing: border-box;
     overflow-y: auto;
-    transition: opacity 0.5s ease-in-out;
+    transition-delay: 5s;
+    transition: ease-in-out 2s; /* 0.5s delay to allow left panel animation to complete */
     border: 0.5px solid #B3B3B3;
     border-radius: 8px;
 }
