--- a/frontend/src/features/checkout/styles/CreditCardForm.module.css
+++ b/frontend/src/features/checkout/styles/CreditCardForm.module.css
@@ -33,7 +33,7 @@
     font-variation-settings: "wdth" 100;
     font-size: 16px;
     line-height: 140%;
-    color: #1E1E1E;
+    color: #1e1e1ecc;
     transition: border-color 0.3s ease;
 }
 
